Fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -1,178 +1,171 @@
-
-
-
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-color: #323232;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 100%;
-
-    
-    
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #323232;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 100%;
 }
+
+.conteiner,
+.header,
+.main,
+.footer {
+  background-color: #323232;
+  height: 100%;
+}
+
 * {
-    
-    box-sizing: inherit;
-    
-    transition-property: all;
-    
-    transition-duration: .3s;
-    
-    transition-timing-function: ease;
+  box-sizing: border-box;
 
+  transition-property: all;
+
+  transition-duration: 0.3s;
+
+  transition-timing-function: ease;
 }
-  
 
 .conteiner {
-    margin: auto;
-    width: 80%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 20vh auto 20vh;
-    grid-template-areas: "h"
-                         "m"
-                         "f";   
-    row-gap: 20px;
-
+  min-height: 100vh;
+  overflow: hidden;
+  margin: auto;
+  width: 80%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 20vh auto 20vh;
+  grid-template-areas:
+    "h"
+    "m"
+    "f";
+  row-gap: 20px;
 }
 
 @media (min-width: 40em) {
-    .conteiner {
-        width: 512px;  
-    }
-
+  .conteiner {
+    width: 512px;
+  }
 }
 
 @media (max-height: 900px) {
-    .conteiner {
-        grid-template-rows: 190px auto 170px;
-    }
+  .conteiner {
+    grid-template-rows: 190px auto 170px;
   }
-
+}
 
 .icon > img {
-    border-radius: 50%;
-    border: 3px solid #6AFCFC;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 0.5em;
+  border-radius: 50%;
+  border: 3px solid #6afcfc;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 0.5em;
 }
 
-.header{
-    grid-area: h;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0;
-    font-size: 30px;
-    text-align: center;
-    color: #6AFCFC;
-    max-width: 100%;
+.header {
+  grid-area: h;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin: 0;
+  font-size: 30px;
+  text-align: center;
+  color: #6afcfc;
+  max-width: 100%;
 
-    align-self: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    
-    display:flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    
+  align-self: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.main{
-    grid-area: m;
-    
-    display:flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
+.main {
+  padding-top: 2rem;
 
-    
-    }
+  grid-area: m;
 
-.footer{
-    grid-area: f;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-end;
-    align-items: center;
-  
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.footer {
+  grid-area: f;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .button {
-    margin-bottom: 2em;
-    width: 100%;
-
+  margin-bottom: 2em;
+  width: 100%;
 }
 
 .btn {
-    color: #fffef5;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 45px;
-    
+  color: #fffef5;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 45px;
 
-    position: relative;
-    text-decoration: none;
-    text-transform: uppercase;
-    text-align: center;
-    
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+}
 
-  }
-  
-  .btn:hover {
-    text-decoration: none;
-  }
-  
-  .btn-1 {
-    background: #43434A;
-    font-weight: 100;
-    display:flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    height: fit-content;
-    
-    
-  }
-  .btn-1 svg {
-    height: 45px;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    
-  }
-  .btn-1 rect {
-    fill: none;
-    stroke: #6AFCFC;
-    stroke-width: 2;
-    stroke-dasharray: 422, 0;
-    -webkit-transition: all 0.35s linear;
-    transition: all 0.35s linear;
-  }
-  
-  .btn-1:hover {
-    background:#43434A;
-    color: #6AFCFC;
-    font-weight: 900;
-    letter-spacing: 1px;
-  }
-  .btn-1:hover rect {
-    stroke-width: 5;
-    stroke-dasharray: 15, 310;
-    stroke-dashoffset: 48;
-    -webkit-transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
-  }
+.btn:hover {
+  text-decoration: none;
+}
 
+.btn-1 {
+  background: #43434a;
+  font-weight: 100;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+}
+.btn-1 svg {
+  height: 45px;
+  width: 100%;
+  left: 0;
+  position: absolute;
+}
+.btn-1 rect {
+  fill: none;
+  stroke: #6afcfc;
+  stroke-width: 2;
+  stroke-dasharray: 422, 0;
+  -webkit-transition: all 0.35s linear;
+  transition: all 0.35s linear;
+}
+
+.btn-1:hover {
+  background: #43434a;
+  color: #6afcfc;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+.btn-1:hover rect {
+  stroke-width: 5;
+  stroke-dasharray: 15, 310;
+  stroke-dashoffset: 48;
+  -webkit-transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+}
